📝 — Missing comma in /now post

--- a/src/content/now/2026-02-20.md
+++ b/src/content/now/2026-02-20.md
@@ -26,4 +26,4 @@ I've had a big love of Italian culture and food and music and film for a long ti
 
 #### Also
 
-Over the past few months, I've fallen in love with someone very wonderful, and I finally got the courage and opportunity to tell them so. Every time I can make them laugh at something stupid I've said, lightning strikes at the old sun-warmed & lichenous stone of my heart, and as it cracks open in its cataclysmic cleavings, it reveals an outpouring of verdant plant life — greens like you’ve never seen — and iridescently-shelled insects, and small, furtive, furry creatures after them. And this teeming world is of course my great secret, you understand, but as you and I are old friends, I'm glad to share it with you.
+Over the past few months, I've fallen in love with someone very wonderful, and I finally got the courage and opportunity to tell them so. Every time I can make them laugh at something stupid I've said, lightning strikes at the old sun-warmed & lichenous stone of my heart, and as it cracks open, in its cataclysmic cleavings, it reveals an outpouring of verdant plant life — greens like you’ve never seen — and iridescently-shelled insects, and small, furtive, furry creatures after them. And this teeming world is of course my great secret, you understand, but as you and I are old friends, I'm glad to share it with you.
